@@ -1,7 +1,12 @@
 2005-05-13  Bruno Haible  <bruno@clisp.org>
 
+	* spvw.d (main) [UNIX_DARWIN && TYPECODES && TRIVIALMAP_MEMORY]:
+	Provide a good location of heaps.
+
+2005-05-13  Bruno Haible  <bruno@clisp.org>
+
 	Make it possible to use 64-bit integer types with MSVC.
-	* stdint_h (int64_t, uint64_t, int_least64_t, uint_least64_t,
+	* stdint_.h (int64_t, uint64_t, int_least64_t, uint_least64_t,
 	int_fast64_t, uint_fast64_t, intmax_t, uintmax_t, INT64_MIN, INT64_MAX,
 	UINT64_MAX, INT_LEAST64_MIN, INT_LEAST64_MAX, UINT_LEAST64_MAX,
 	INT_FAST64_MIN, INT_FAST64_MAX, UINT_FAST64_MAX, INTMAX_MIN,
